test_files/klee-out-CTR_v1/test000001.ptr.err
Error: memory error: out of bound pointer
File: ./openssl/crypto/modes/ctr128.c
Line: 137
assembly.ll line: 1511
Stack: 
=== STACK DUMP, tag: 0===
	#000001511 in CRYPTO_ctr128_encrypt (in=274890587072, out=274890587104, len=16, key=274890998784, ivec=274890587168, ecount_buf=274890587200, num=0) at ./openssl/crypto/modes/ctr128.c:137
	#100001474 in AES_ctr128_encrypt (in=274890587072, out=274890587104, length=16, key=274890998784, ivec=274890587168, ecount_buf=274890587200, num=0) at ./openssl/crypto/aes/aes_ctr.c:60
	#200000056 in main () at testing_AES_Ctr.c:31
=== STACK DUMP END ===
Info: 
	address: 0
	next: object at 274890585568 of size 16
		MO7[16] allocated at global:main.in
